Description
0.4.8-dev-668-g5966a18
When you use the shortcut "Win+E":
Expected behavior:
"My Computer" gets opened, as if you had clicked the desktop-link "My Computer"
Observed behavior:
"My Documents" gets opened erroneously
0.4.8dev-668-winE.png![]()
(../dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
|
(../win32ss/user/ntuser/focus.c:1519) err: ptiLastInput is SET!!
|
(../dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
|
fixme:(../dll/win32/comctl32/toolbar.c:380) [00050130] TBSTYLE_REGISTERDROP not implemented
|
fixme:(../dll/win32/comctl32/toolbar.c:380) [00070138] TBSTYLE_REGISTERDROP not implemented
|
fixme:(../dll/win32/comctl32/toolbar.c:5493) hwnd=00070138 wParam 00000001 lParam 00000000
|
fixme:(../dll/win32/shlwapi/url.c:2517) stub
|
(../win32ss/user/ntuser/winpos.c:3327) err: NtUserSetWindowPos bad window handle!
|
WARNING: NtUserLockWindowUpdate at ../win32ss/user/ntuser/ntstubs.c:921 is UNIMPLEMENTED!
|