[EXPLORER] Winkey + E shortcut should open "My Computer" instead of "My documents" CORE-14199